# jbotci

./: .cll_analysis_input.csv  .dockerignore  .gitattributes  .gitignore  .gitmodules  AGENTS.md  Cargo.toml  LICENSE.md  README.md  librust_out.rlib  render.yaml
.cargo/: config.toml
.github/workflows/: render-image.yml
apps/jbotci/: Cargo.toml
apps/jbotci-app/: Cargo.toml  Dioxus.toml  build.rs  index.html
apps/jbotci-app/bundle/linux/: jbotci.desktop.hbs
apps/jbotci-app/bundle/windows/: jbotci.wxs.hbs
apps/jbotci-app/src/: main.rs
apps/jbotci-desktop/: Cargo.toml  Dioxus.toml
apps/jbotci-server/: Cargo.toml  build.rs
apps/jbotci-server/src/: lib.rs  main.rs
apps/jbotci-web/: Cargo.toml  Dioxus.toml  build.rs  index.html
apps/jbotci-web-worker/: Cargo.toml  build.rs
apps/jbotci-web-worker/src/: lib.rs
apps/jbotci-web/assets/: compute-worker.js  compute.js  embedding-worker.js  embeddings.js  f2llm-webgpu-runtime.js  main.css  manifest.webmanifest
apps/jbotci-web/src/: f2llm_runtime_core.rs  f2llm_webgpu_runtime.rs  main.rs
apps/jbotci/src/: benchmark.rs  main.rs
crates/bityzba/: Cargo.toml  LICENSE.md  README.md
crates/bityzba-macros/: Cargo.toml  README.md
crates/bityzba-macros/src/: lib.rs
crates/bityzba-macros/src/implementation/: codegen.rs  data.rs  invariant.rs  mod.rs  parse.rs  type_invariant.rs
crates/bityzba/src/: contract_scanner.rs  lib.rs
crates/bityzba/src/implementation/: codegen.rs  doc.rs  fields.rs  invariant.rs  mod.rs  type_invariant.rs
crates/bityzba/tests/: compile.rs  contract_scanner.rs  expensive_contracts.rs  functions.rs  implication.rs  issues.rs  methods.rs  old.rs  ranged_int.rs  traits.rs  type_invariant.rs
crates/bityzba/tests/contract_scanner/complete/src/: lib.rs
crates/bityzba/tests/contract_scanner/missing/src/: lib.rs
crates/bityzba/tests/ui/fail/: direct_enum_construct.rs  direct_enum_construct.stderr  duplicate_field.rs  duplicate_field.stderr  enum_duplicate_variant_invariant.rs  enum_duplicate_variant_invariant.stderr  enum_missing_variant_invariant.rs  enum_missing_variant_invariant.stderr  enum_tuple_variant_requires_pattern.rs  enum_tuple_variant_requires_pattern.stderr  enum_unknown_variant_invariant.rs  enum_unknown_variant_invariant.stderr  expensive_contract_typechecked.rs  expensive_contract_typechecked.stderr  literal_construct.rs  literal_construct.stderr  missing_field.rs  missing_field.stderr  no_deref_mut.rs  no_deref_mut.stderr  private_data_access.rs  private_data_access.stderr  wrong_field_name.rs  wrong_field_name.stderr  wrong_value_type.rs  wrong_value_type.stderr
crates/bityzba/tests/ui/pass/: path_qualified_data.rs  path_qualified_fields.rs  private_new.rs
crates/jbotci-cll/: Cargo.toml  build.rs
crates/jbotci-cll/src/: lib.rs
crates/jbotci-contracts/: Cargo.toml
crates/jbotci-contracts/src/: lib.rs
crates/jbotci-diagnostics/: Cargo.toml
crates/jbotci-diagnostics/src/: lib.rs
crates/jbotci-dialect/: Cargo.toml
crates/jbotci-dialect/src/: lib.rs
crates/jbotci-dictionary/: Cargo.toml
crates/jbotci-dictionary-data/: Cargo.toml  README.md  build.rs
crates/jbotci-dictionary-data/src/: lib.rs
crates/jbotci-dictionary/src/: import.rs  lib.rs
crates/jbotci-embedding-inputs/: Cargo.toml  build.rs
crates/jbotci-embedding-inputs/src/: lib.rs
crates/jbotci-embeddings/: Cargo.toml
crates/jbotci-embeddings/src/: lib.rs  native.rs
crates/jbotci-fixtures/: Cargo.toml
crates/jbotci-fixtures/src/: lib.rs
crates/jbotci-gentufa/: Cargo.toml  build.rs
crates/jbotci-gentufa/src/: lib.rs  render.rs
crates/jbotci-jvozba/: Cargo.toml
crates/jbotci-jvozba/src/: lib.rs
crates/jbotci-morphology/: Cargo.toml
crates/jbotci-morphology/src/: chumsky_spike.rs  cmavo.rs  grammar.rs  lib.rs  lujvo.rs  segment.rs  syntax_eq.rs  tree.rs
crates/jbotci-morphology/src/segment/: fast.rs  phonotactics.rs
crates/jbotci-orthography/: Cargo.toml
crates/jbotci-orthography/src/: lib.rs
crates/jbotci-output/: Cargo.toml
crates/jbotci-output/src/: brackets.rs  diagnostics.rs  json.rs  lib.rs  places.rs  qr_code.rs  recovered.rs  references.rs  sexpr.rs  surface.rs  trace.rs  tree.rs  walker.rs
crates/jbotci-output/tests/: dictionary_category_exceptions.tsv  dictionary_ipa_xfails.tsv  dictionary_parse_xfails.tsv  dictionary_unsyllabifiable_cmevla.tsv
crates/jbotci-search/: Cargo.toml  build.rs
crates/jbotci-search/src/: lib.rs  phonetic.rs  vlacku.rs
crates/jbotci-semantics/: Cargo.toml
crates/jbotci-semantics/src/: lib.rs  references.rs
crates/jbotci-source/: Cargo.toml
crates/jbotci-source/src/: lib.rs
crates/jbotci-syntax/: Cargo.toml
crates/jbotci-syntax-macros/: Cargo.toml
crates/jbotci-syntax-macros/src/: lib.rs
crates/jbotci-syntax/src/: chumsky_spike.rs  grammar.rs  lib.rs  source_tree.rs  tree.rs
crates/jbotci-syntax/src/grammar/: ast.rs  mod.rs  parse_error.rs  parser.rs  render.rs  tense.rs  tokens.rs
crates/jbotci-syntax/tests/: node_sizes.rs
crates/jbotci-tree/: Cargo.toml
crates/jbotci-tree-macros/: Cargo.toml
crates/jbotci-tree-macros/src/: lib.rs
crates/jbotci-tree/src/: lib.rs
crates/jbotci-ui/: Cargo.toml
crates/jbotci-ui/assets/: compute.js  (+5 more)
crates/jbotci-web-core/: Cargo.toml
deploy/render/: Dockerfile  Dockerfile.runtime
docs/: architecture.md  test-fixtures.md
fixtures/: README.md
fixtures/profiles/: all.toml  cargo.toml
src/: lib.rs
tests/: enum_invariant_audit.rs  fixture_suite.rs  source_assignment.rs  struct_invariant_audit.rs
tests/fixtures/: README.md
tests/support/: fixtures.rs
tools/embedding-pack/: build-web-embeddings.mjs  package-lock.json  package.json  test-build-web-embeddings.mjs
tools/wasm-stack-limit/: index.html
tools/webgpu-embedding-runtime/: README.md  build-f2llm-vector-pack.py  export-f2llm-onnx-reference.py  export-f2llm-webgpu-from-onnx-q4.py  export-f2llm-webgpu.py  generate-f2llm-goldens.py  test-runtime-reference.mjs  test-tokenizer.mjs
xtask/: Cargo.toml
xtask-full/: Cargo.toml
xtask-full/src/: main.rs
xtask/src/: main.rs  syntax_compare.rs
(+51734 files in other folders)
