[workspace]
members = [
    ".",
    "apps/jbotci",
    "apps/jbotci-server",
    "crates/jbotci-cll",
    "crates/bityzba",
    "crates/bityzba-macros",
    "crates/jbotci-dialect",
    "crates/jbotci-dictionary",
    "crates/jbotci-jvozba",
    "crates/jbotci-morphology",
    "crates/jbotci-output",
    "crates/jbotci-search",
    "crates/jbotci-semantics",
    "crates/jbotci-source",
    "crates/jbotci-syntax",
    "xtask",
]
resolver = "3"

[workspace.package]
version = "0.1.0"
edition = "2024"
rust-version = "1.95"
license = "AGPL-3.0-or-later"
authors = ["Pavel Minaev"]
repository = "https://codeberg.org/int_19h/jbotci"

[package]
name = "jbotci-workspace"
description = "Workspace-level integration tests for jbotci."
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
publish = false

[features]
expensive_contracts = []

[dependencies]
bityzba.workspace = true

[workspace.dependencies]
anyhow = "1"
chumsky = { version = "0.13", features = ["memoization"] }
clap = { version = "4", features = ["derive"] }
owo-colors = { version = "4", features = ["supports-colors"] }
serde = { version = "1", features = ["derive"] }
serde_json = { version = "1", features = ["unbounded_depth"] }
serde_stacker = "0.1"
rayon = "1"
thiserror = "2"
toml = { version = "0.9", features = ["unbounded"] }
walkdir = "2"

jbotci-cll = { path = "crates/jbotci-cll" }
bityzba = { path = "crates/bityzba" }
bityzba-macros = { path = "crates/bityzba-macros" }
jbotci-dialect = { path = "crates/jbotci-dialect" }
jbotci-dictionary = { path = "crates/jbotci-dictionary" }
jbotci-jvozba = { path = "crates/jbotci-jvozba" }
jbotci-morphology = { path = "crates/jbotci-morphology" }
jbotci-output = { path = "crates/jbotci-output" }
jbotci-search = { path = "crates/jbotci-search" }
jbotci-semantics = { path = "crates/jbotci-semantics" }
jbotci-source = { path = "crates/jbotci-source" }
jbotci-syntax = { path = "crates/jbotci-syntax" }

[dev-dependencies]
bityzba.workspace = true
jbotci-morphology.workspace = true
jbotci-dialect.workspace = true
jbotci-source.workspace = true
jbotci-syntax.workspace = true
serde.workspace = true
serde_json.workspace = true
serde_stacker.workspace = true
rayon.workspace = true
thiserror.workspace = true
toml.workspace = true
walkdir.workspace = true

[build-dependencies]
bityzba = { workspace = true, features = ["contract_scanner"] }

[lints]
workspace = true

[workspace.lints.rust]
missing_debug_implementations = "warn"
