[workspace]
members = [
    ".",
    "apps/jbotci",
    "apps/jbotci-server",
    "apps/jbotci-web",
    "apps/jbotci-web-worker",
    "crates/jbotci-cll",
    "crates/jbotci-diagnostics",
    "crates/bityzba",
    "crates/bityzba-macros",
    "crates/jbotci-dialect",
    "crates/jbotci-dictionary",
    "crates/jbotci-dictionary-data",
    "crates/jbotci-embedding-inputs",
    "crates/jbotci-embeddings",
    "crates/jbotci-gentufa",
    "crates/jbotci-jvozba",
    "crates/jbotci-morphology",
    "crates/jbotci-output",
    "crates/jbotci-search",
    "crates/jbotci-semantics",
    "crates/jbotci-source",
    "crates/jbotci-syntax",
    "crates/jbotci-tree",
    "crates/jbotci-tree-macros",
    "crates/jbotci-web-core",
    "xtask",
]
default-members = [
    ".",
    "apps/jbotci",
    "apps/jbotci-server",
    "apps/jbotci-web",
    "apps/jbotci-web-worker",
    "crates/jbotci-cll",
    "crates/jbotci-diagnostics",
    "crates/bityzba",
    "crates/bityzba-macros",
    "crates/jbotci-dialect",
    "crates/jbotci-dictionary",
    "crates/jbotci-dictionary-data",
    "crates/jbotci-embedding-inputs",
    "crates/jbotci-embeddings",
    "crates/jbotci-gentufa",
    "crates/jbotci-jvozba",
    "crates/jbotci-morphology",
    "crates/jbotci-output",
    "crates/jbotci-search",
    "crates/jbotci-semantics",
    "crates/jbotci-source",
    "crates/jbotci-syntax",
    "crates/jbotci-tree",
    "crates/jbotci-tree-macros",
    "crates/jbotci-web-core",
    "xtask",
]
resolver = "3"

[workspace.package]
version = "0.1.0"
edition = "2024"
rust-version = "1.95"
license = "AGPL-3.0-or-later"
authors = ["Pavel Minaev"]
repository = "https://codeberg.org/int_19h/jbotci"

[package]
name = "jbotci-workspace"
description = "Workspace-level integration tests for jbotci."
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
publish = false

[features]
expensive_contracts = []

[dependencies]
bityzba.workspace = true
jbotci-diagnostics.workspace = true

[workspace.dependencies]
anyhow = "1"
base64 = "0.22.1"
chumsky = { version = "0.13", features = ["memoization"] }
clap = { version = "4", features = ["derive"] }
concolor = { version = "0.1", features = ["auto"] }
concolor-clap = "0.1"
annotate-snippets = "0.12"
owo-colors = "4"
serde = { version = "1", features = ["derive", "rc"] }
serde_json = { version = "1", features = ["preserve_order", "unbounded_depth"] }
serde_stacker = "0.1"
sha2 = "0.10"
smallvec = { version = "1", features = ["serde"] }
terminal_size = "0.4"
proc-macro2 = "1"
prettyplease = "0.2"
quote = "1"
rayon = "1"
syn = { version = "2", features = ["full", "extra-traits"] }
thiserror = "2"
toml = { version = "0.9", features = ["unbounded"] }
unicode-width = "0.2"
ureq = "3"
vec1 = { version = "1.12.1", features = ["serde", "smallvec-v1"] }
walkdir = "2"
axum = "0.8"
tokio = { version = "1", features = ["macros", "rt-multi-thread", "net", "fs"] }
tower = "0.5"
dioxus = "0.7"
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"
js-sys = "0.3"
web-sys = "0.3"
bzip2 = "0.6.1"
brotli = "8.0.3"
directories = "6.0.0"
llama-cpp-4 = { version = "0.3.0", default-features = false }
roxmltree = "0.21.1"
fontdb = "0.23.0"
resvg = "0.47.0"
tempfile = "3.27.0"
tiny-skia = "0.12.0"
usvg = "0.47.0"
xmlwriter = "0.1.0"

jbotci-cll = { path = "crates/jbotci-cll" }
jbotci-diagnostics = { path = "crates/jbotci-diagnostics" }
bityzba = { path = "crates/bityzba" }
bityzba-macros = { path = "crates/bityzba-macros" }
jbotci-dialect = { path = "crates/jbotci-dialect" }
jbotci-dictionary = { path = "crates/jbotci-dictionary" }
jbotci-dictionary-data = { path = "crates/jbotci-dictionary-data" }
jbotci-embedding-inputs = { path = "crates/jbotci-embedding-inputs" }
jbotci-embeddings = { path = "crates/jbotci-embeddings" }
jbotci-gentufa = { path = "crates/jbotci-gentufa" }
jbotci-jvozba = { path = "crates/jbotci-jvozba" }
jbotci-morphology = { path = "crates/jbotci-morphology" }
jbotci-output = { path = "crates/jbotci-output" }
jbotci-search = { path = "crates/jbotci-search" }
jbotci-semantics = { path = "crates/jbotci-semantics" }
jbotci-source = { path = "crates/jbotci-source" }
jbotci-syntax = { path = "crates/jbotci-syntax" }
jbotci-tree = { path = "crates/jbotci-tree" }
jbotci-tree-macros = { path = "crates/jbotci-tree-macros" }
jbotci-web-core = { path = "crates/jbotci-web-core" }

[dev-dependencies]
bityzba.workspace = true
jbotci-morphology.workspace = true
jbotci-output.workspace = true
jbotci-dialect.workspace = true
jbotci-source.workspace = true
jbotci-syntax.workspace = true
serde.workspace = true
serde_json.workspace = true
serde_stacker.workspace = true
rayon.workspace = true
thiserror.workspace = true
toml.workspace = true
walkdir.workspace = true

[build-dependencies]
bityzba = { workspace = true, features = ["contract_scanner"] }

[lints]
workspace = true

[workspace.lints.rust]
missing_debug_implementations = "warn"
