[package]
name = "xtask"
description = "Workspace automation for jbotci."
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true

[[bin]]
name = "xtask"
path = "src/main.rs"

[dependencies]
anyhow.workspace = true
clap.workspace = true
contracts.workspace = true
jbotci-dialect.workspace = true
jbotci-morphology.workspace = true
jbotci-source.workspace = true
jbotci-syntax.workspace = true
rayon.workspace = true
serde.workspace = true
serde_json.workspace = true
serde_stacker.workspace = true
thiserror.workspace = true
toml.workspace = true
walkdir.workspace = true

[lints]
workspace = true
