[package]
name = "xtask"
description = "Workspace automation for jbotci."
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true

[features]
expensive_contracts = []

[[bin]]
name = "xtask"
path = "src/main.rs"

[dependencies]
anyhow.workspace = true
clap.workspace = true
bityzba.workspace = true
jbotci-dialect.workspace = true
jbotci-diagnostics.workspace = true
jbotci-dictionary = { workspace = true, features = ["import"] }
jbotci-morphology.workspace = true
jbotci-output.workspace = true
jbotci-semantics.workspace = true
jbotci-source.workspace = true
jbotci-syntax.workspace = true
rayon.workspace = true
serde.workspace = true
serde_json.workspace = true
serde_stacker.workspace = true
sha2.workspace = true
thiserror.workspace = true
toml.workspace = true
ureq.workspace = true
walkdir.workspace = true

[build-dependencies]
bityzba = { workspace = true, features = ["contract_scanner"] }

[lints]
workspace = true
