[package]
name = "xtask"
description = "Lightweight workspace automation dispatcher for jbotci."
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
publish = false

[features]
expensive_contracts = []

[[bin]]
name = "xtask"
path = "src/main.rs"

[dependencies]
anyhow.workspace = true
bityzba.workspace = true
clap.workspace = true
serde_json.workspace = true
sha2.workspace = true
walkdir.workspace = true

[dev-dependencies]
tempfile.workspace = true

[build-dependencies]
bityzba = { workspace = true, features = ["contract_scanner"] }

[lints]
workspace = true
