[package]
name = "jbotci-app"
description = "Dioxus app launcher for jbotci."
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
publish = false

[features]
app = []
expensive_contracts = []
# Dioxus chooses the first default-member binary before applying platform flags.
# Keep `web` as the only renderer-named feature so bare `dx build` infers web;
# explicit desktop/mobile flags can still select features that enable those Dioxus renderers.
web = ["app", "dioxus/web", "jbotci-ui/web"]
native-desktop = ["app", "dioxus/desktop", "jbotci-ui/desktop", "dep:openssl"]
native-mobile = ["app", "dioxus/mobile", "jbotci-ui/mobile", "dep:openssl"]

[[bin]]
name = "jbotci-app"
path = "src/main.rs"
required-features = ["app"]

[dependencies]
bityzba.workspace = true
dioxus = { workspace = true, default-features = false }
jbotci-ui.workspace = true
openssl = { workspace = true, optional = true }

[build-dependencies]
bityzba = { workspace = true, features = ["contract_scanner"] }

[lints]
workspace = true
