[package]
name = "jbotci-app"
description = "Dioxus app launcher for jbotci."
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
publish = false

[features]
app = []
expensive_contracts = []
# Dioxus chooses the first default-member binary before applying platform flags.
# Keep `web` as the only renderer-named feature so bare `dx build` infers web;
# explicit desktop/mobile flags can still select features that enable those Dioxus renderers.
web = ["app", "dioxus/web", "jbotci-ui/web"]
native-desktop = ["app", "dioxus/desktop", "jbotci-ui/desktop"]
native-mobile = ["app", "dioxus/mobile", "jbotci-ui/mobile"]

[[bin]]
name = "jbotci-app"
path = "src/main.rs"
required-features = ["app"]

[dependencies]
bityzba.workspace = true
dioxus = { workspace = true, default-features = false }
jbotci-ui.workspace = true

[target.'cfg(target_os = "macos")'.dependencies]
objc = "0.2.7"

[build-dependencies]
bityzba = { workspace = true, features = ["contract_scanner"] }

[lints]
workspace = true
