[package]
name = "jbotci-desktop"
description = "Dioxus desktop app for jbotci."
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
publish = false

[[bin]]
name = "jbotci-desktop"
path = "src/main.rs"

[dependencies]
bityzba.workspace = true
dioxus = { workspace = true, default-features = false, features = ["desktop"] }
jbotci-ui = { workspace = true, features = ["desktop"] }
openssl.workspace = true

[build-dependencies]
bityzba = { workspace = true, features = ["contract_scanner"] }

[lints]
workspace = true
