[package]
name = "jbotci-server"
description = "Server application for jbotci web and HTTP integrations."
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true

[[bin]]
name = "jbotci-server"
path = "src/main.rs"

[dependencies]
anyhow.workspace = true
clap.workspace = true

[lints]
workspace = true
