[package]
name = "jbotci-server"
description = "Server application for jbotci web and HTTP integrations."
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true

[features]
embed-web-assets = []
expensive_contracts = []

[[bin]]
name = "jbotci-server"
path = "src/main.rs"

[lib]
name = "jbotci_server"
path = "src/lib.rs"

[dependencies]
anyhow.workspace = true
axum.workspace = true
bityzba.workspace = true
clap.workspace = true
jbotci-embeddings.workspace = true
jbotci-web-core.workspace = true
serde.workspace = true
tokio.workspace = true

[build-dependencies]
bityzba = { workspace = true, features = ["contract_scanner"] }

[dev-dependencies]
serde_json.workspace = true
tower.workspace = true

[lints]
workspace = true
