[package]
name = "jbotci-web-worker"
description = "WASM worker entry point for jbotci web compute tasks."
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
publish = false

[features]
expensive_contracts = []

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
bityzba.workspace = true
jbotci-web-core.workspace = true
wasm-bindgen.workspace = true

[build-dependencies]
bityzba = { workspace = true, features = ["contract_scanner"] }

[lints]
workspace = true
