[package]
name = "jbotci-web"
description = "Dioxus web client for jbotci."
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true

[features]
expensive_contracts = []

[[bin]]
name = "jbotci-web"
path = "src/main.rs"

[dependencies]
bityzba.workspace = true
dioxus = { workspace = true, default-features = false, features = ["web"] }
jbotci-ui = { workspace = true, features = ["web"] }

[build-dependencies]
bityzba = { workspace = true, features = ["contract_scanner"] }

[lints]
workspace = true
