[package]
name = "jbotci-web"
description = "Dioxus web client for jbotci."
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true

[features]
expensive_contracts = []
web = ["dioxus/web", "jbotci-ui/web"]

[[bin]]
name = "jbotci-web"
path = "src/main.rs"
required-features = ["web"]

[dependencies]
bityzba.workspace = true
dioxus = { workspace = true, default-features = false }
jbotci-ui.workspace = true

[build-dependencies]
bityzba = { workspace = true, features = ["contract_scanner"] }

[lints]
workspace = true
