[package]
name = "jbotci"
description = "Command-line Lojban toolkit."
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true

[features]
expensive_contracts = []

[[bin]]
name = "jbotci"
path = "src/main.rs"

[dependencies]
anyhow.workspace = true
bityzba.workspace = true
clap.workspace = true
jbotci-morphology.workspace = true
jbotci-output.workspace = true
jbotci-syntax.workspace = true
serde_json.workspace = true

[build-dependencies]
bityzba = { workspace = true, features = ["contract_scanner"] }

[lints]
workspace = true
