[package]
name = "jbotci-cll"
description = "CLL reference data model for jbotci."
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true

[features]
expensive_contracts = []

[dependencies]
serde.workspace = true
thiserror.workspace = true

[lints]
workspace = true
