[package]
name = "jbotci-cll"
description = "CLL reference data model for jbotci."
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true

[features]
expensive_contracts = []

[dependencies]
bityzba.workspace = true
bzip2.workspace = true
jbotci-morphology.workspace = true
roxmltree.workspace = true
serde.workspace = true
sha2.workspace = true
thiserror.workspace = true
toml.workspace = true

[dev-dependencies]
jbotci-syntax.workspace = true

[build-dependencies]
bityzba = { workspace = true, features = ["contract_scanner"] }
bzip2.workspace = true

[lints]
workspace = true
