[package]
name = "jbotci-contracts"
description = "Project contract attributes for jbotci."
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true

[lib]
proc-macro = true

[features]
expensive_contracts = []

[lints]
workspace = true
