[package]
name = "jbotci-dialect"
description = "Lojban dialect formula model and parser."
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true

[dependencies]
contracts.workspace = true
serde.workspace = true
thiserror.workspace = true

[lints]
workspace = true
