[package]
name = "jbotci-dictionary"
description = "Dictionary data model for jbotci."
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true

[dependencies]
serde.workspace = true
thiserror.workspace = true
jbotci-morphology.workspace = true

[lints]
workspace = true
