[package]
name = "jbotci-dictionary"
description = "Dictionary data model for jbotci."
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true

[features]
expensive_contracts = []
import = ["serde_json"]

[dependencies]
bityzba.workspace = true
serde.workspace = true
serde_json = { workspace = true, optional = true }
thiserror.workspace = true

[build-dependencies]
bityzba = { workspace = true, features = ["contract_scanner"] }

[lints]
workspace = true
