[package]
name = "jbotci-embedding-inputs"
description = "Canonical embedding input text and corpus export support for jbotci."
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true

[features]
expensive_contracts = []

[dependencies]
bityzba.workspace = true
jbotci-cll.workspace = true
jbotci-dictionary.workspace = true
jbotci-dictionary-data.workspace = true
jbotci-search.workspace = true
serde.workspace = true
serde_json.workspace = true
sha2.workspace = true

[build-dependencies]
bityzba = { workspace = true, features = ["contract_scanner"] }

[lints]
workspace = true
