[package]
name = "jbotci-embeddings"
description = "Embedding model, vector pack, and semantic search support for jbotci."
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true

[features]
default = []
expensive_contracts = []
native-llama = ["dep:llama-cpp-4"]

[dependencies]
anyhow.workspace = true
bityzba.workspace = true
brotli.workspace = true
directories.workspace = true
jbotci-cll.workspace = true
jbotci-dictionary.workspace = true
jbotci-dictionary-data.workspace = true
jbotci-embedding-inputs.workspace = true
jbotci-search.workspace = true
llama-cpp-4 = { workspace = true, optional = true }
serde.workspace = true
serde_json.workspace = true
sha2.workspace = true
thiserror.workspace = true
ureq.workspace = true

[build-dependencies]
bityzba = { workspace = true, features = ["contract_scanner"] }

[dev-dependencies]
tempfile.workspace = true

[lints]
workspace = true
