[package]
name = "jbotci-fixtures"
description = "Unified TOML test fixture loader for jbotci."
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true

[dependencies]
serde.workspace = true
thiserror.workspace = true
toml.workspace = true
walkdir.workspace = true
jbotci-morphology.workspace = true

[lints]
workspace = true
