[package]
name = "jbotci-gentufa"
description = "Shared gentufa block layout and image export support for jbotci."
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true

[features]
expensive_contracts = []

[dependencies]
base64.workspace = true
bityzba.workspace = true
fontdb.workspace = true
jbotci-morphology.workspace = true
jbotci-orthography.workspace = true
jbotci-output.workspace = true
jbotci-semantics.workspace = true
jbotci-source.workspace = true
jbotci-syntax.workspace = true
jbotci-tree.workspace = true
resvg.workspace = true
roxmltree.workspace = true
serde.workspace = true
thiserror.workspace = true
tiny-skia.workspace = true
usvg.workspace = true
xmlwriter.workspace = true

[build-dependencies]
bityzba = { workspace = true, features = ["contract_scanner"] }

[lints]
workspace = true
