[package]
name = "jbotci-jvozba"
description = "Lujvo composition and decomposition for jbotci."
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true

[features]
expensive_contracts = []

[dependencies]
serde.workspace = true
thiserror.workspace = true
jbotci-morphology.workspace = true

[lints]
workspace = true
