[package]
name = "jbotci-morphology"
description = "Lojban morphology model and parser."
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true

[dependencies]
chumsky.workspace = true
serde.workspace = true
thiserror.workspace = true
jbotci-source.workspace = true

[lints]
workspace = true
