[package]
name = "jbotci-morphology"
description = "Lojban morphology model and parser."
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true

[features]
expensive_contracts = []

[dependencies]
chumsky.workspace = true
bityzba.workspace = true
jbotci-dialect.workspace = true
serde.workspace = true
thiserror.workspace = true
jbotci-source.workspace = true

[dev-dependencies]
serde_json.workspace = true

[lints]
workspace = true
