[package]
name = "jbotci-orthography"
description = "Shared Lojban orthography rendering helpers."
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true

[features]
expensive_contracts = []

[dependencies]
bityzba.workspace = true
jbotci-morphology.workspace = true
serde.workspace = true

[build-dependencies]
bityzba = { workspace = true, features = ["contract_scanner"] }

[lints]
workspace = true
