[package]
name = "jbotci-output"
description = "jbotci output format models and render entry points."
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true

[dependencies]
serde.workspace = true
thiserror.workspace = true
jbotci-semantics.workspace = true
jbotci-syntax.workspace = true

[lints]
workspace = true
