[package]
name = "jbotci-output"
description = "jbotci output format models and render entry points."
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true

[features]
expensive_contracts = []

[dependencies]
bityzba.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
jbotci-morphology.workspace = true
jbotci-semantics.workspace = true
jbotci-source.workspace = true
jbotci-syntax.workspace = true

[build-dependencies]
bityzba = { workspace = true, features = ["contract_scanner"] }

[lints]
workspace = true
