[package]
name = "jbotci-output"
description = "jbotci output format models and render entry points."
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true

[features]
expensive_contracts = []

[dependencies]
annotate-snippets.workspace = true
bityzba.workspace = true
jbotci-diagnostics.workspace = true
serde.workspace = true
serde_json.workspace = true
serde_stacker.workspace = true
thiserror.workspace = true
jbotci-morphology.workspace = true
jbotci-semantics.workspace = true
jbotci-source.workspace = true
jbotci-syntax.workspace = true
jbotci-tree.workspace = true
owo-colors.workspace = true
unicode-width.workspace = true

[build-dependencies]
bityzba = { workspace = true, features = ["contract_scanner"] }

[lints]
workspace = true
