[package]
name = "jbotci-search"
description = "Semantic search abstractions for jbotci."
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true

[features]
expensive_contracts = []

[dependencies]
bityzba.workspace = true
serde.workspace = true
thiserror.workspace = true

[build-dependencies]
bityzba = { workspace = true, features = ["contract_scanner"] }

[lints]
workspace = true
