[package]
name = "jbotci-search"
description = "Semantic search abstractions for jbotci."
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true

[features]
expensive_contracts = []

[dependencies]
bityzba.workspace = true
jbotci-dictionary.workspace = true
jbotci-jvozba.workspace = true
jbotci-morphology.workspace = true
jbotci-output.workspace = true
regex.workspace = true
serde.workspace = true
thiserror.workspace = true

[build-dependencies]
bityzba = { workspace = true, features = ["contract_scanner"] }

[dev-dependencies]
jbotci-dictionary-data.workspace = true

[lints]
workspace = true
