[package]
name = "jbotci-semantics"
description = "Lojban semantic model and builder."
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true

[features]
expensive_contracts = []

[dependencies]
serde.workspace = true
thiserror.workspace = true
jbotci-source.workspace = true
jbotci-syntax.workspace = true

[lints]
workspace = true
